k8s/dependencies/vroom/vroom.yaml
apiVersion: v1
kind: Service
metadata:
  name: vroom
  namespace: vroom
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: vroom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vroom
  namespace: vroom
spec:
  selector:
    matchLabels:
      app: vroom
  template:
    metadata:
      labels:
        app: vroom
    spec:
      nodeSelector:
        mem: high
        role: worker
      containers:
        - name: vroom
          image: vroomvrp/vroom-docker:v1.11.0
          ports:
            - containerPort: 3000
          resources: 
            requests:
              cpu: "0.3"
              memory: "512Mi"
          volumeMounts:
              - name: vroom
                mountPath: /vroom-express/config.yml
                subPath: config.yml
      volumes:
        - name: vroom
          configMap:
            items:
              - key: config.yml
                path: config.yml
            name: vroom
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vroom-ingress
  namespace: vroom
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
spec:
  tls:
    - hosts:
        - vroom.predictivemovement.se
      secretName: vroom-prod-tls
  rules:
    - host: vroom.predictivemovement.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: vroom
                port:
                  number: 3000
